worked on content of homepage and added new sections

--- a/index.html
+++ b/index.html
@@ -91,14 +91,26 @@
     </div>
 </main>
 
+<div class="work-inquiry">
+    <div class="work-inquiry-text">
+      <h2 class="text-start">Work Inquiry</h2>
+      <p>Let's talk about cooperations and work together.</p>
+    </div>
+
+    <div class="work-inquiry-button">
+      <a href="#" class="button-primary">Get in touch</a>
+    </div>
+</div>
+
 
   <footer>
-    <div class="text-center mb-3 fs-5">verenx@gmail.com</div>
     <div class="contact-icons">
+      <i class="fa-solid fa-square-envelope fa-2xl contact-icon"></i>
       <i class="fa-brands fa-linkedin fa-2xl contact-icon"></i>
       <i class="fa-brands fa-instagram fa-2xl contact-icon"></i>
       <i class="fa-brands fa-github fa-2xl contact-icon"></i>
     </div>
+    <p class="footer-paragraph">This website was coded by <a href="#">Verena Al-Khazraji</a>, is <a href="">open-sourced on Github</a> and <a href="">hosted on Netlify.</a></p>
   </footer>
     
 </body>
