worked on margins

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div class="header-container">
 
   <div class="row">
-    <div class="col-6">
+    <div class="col-7">
       <h2>Hi, I am</h2>
       <h1>Verena Al-Khazraji</h1>
         <p class="header-paragraph">I am a Vienna-based Front-end Developer. 
@@ -54,8 +54,8 @@
       </div>
     </div>
  
-  <div class="col-6">
-    <div class="header-image">
+  <div class="col-5">
+    <div class="header-image ms-4">
       <img src="/images/profile-picture.jpg" alt="profile-picture" class="profile-picture img-fluid">
     </div>
   </div>
