made header responsive

--- a/index.html
+++ b/index.html
@@ -37,10 +37,9 @@
   </nav>
   
   <header>
-  <div class="header-container">
-
   <div class="row">
-    <div class="col-7">
+    <div class="responsive-profile-picture"></div>
+    <div class="col">
       <h2>Hi, I am</h2>
       <h1>Verena Al-Khazraji</h1>
         <p class="header-paragraph">I am a Vienna-based Front-end Developer. 
@@ -54,13 +53,12 @@
       </div>
     </div>
  
-  <div class="col-5">
+  <div class="col d-none d-md-block">
     <div class="header-image ms-4">
       <img src="/images/profile-picture.jpg" alt="profile-picture" class="profile-picture img-fluid">
     </div>
   </div>
  </div>
-</div>
 </header>
 </div>
 
