--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
   
   <header>
   <div class="row">
-    <div class="responsive-profile-picture"></div>
-    <div class="col">
+    <div><img src="/images/profile-picture.jpg" alt="profile-picture" class="responsive-profile-picture img-fluid d-sm-block d-md-none"></div>
+    <div class="col-sm-7">
       <h2>Hi, I am</h2>
       <h1>Verena Al-Khazraji</h1>
         <p class="header-paragraph">I am a Vienna-based Front-end Developer. 
@@ -53,7 +53,7 @@
       </div>
     </div>
  
-  <div class="col d-none d-md-block">
+  <div class="col-5 d-none d-md-block">
     <div class="header-image ms-4">
       <img src="/images/profile-picture.jpg" alt="profile-picture" class="profile-picture img-fluid">
     </div>
@@ -91,7 +91,7 @@
 
 <div class="work-inquiry">
     <div class="work-inquiry-text">
-      <h2 class="text-start">Work Inquiry</h2>
+      <h2 class="h2-start">Work Inquiry</h2>
       <p>Let's talk about cooperations and work together.</p>
     </div>
 
