--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a class="nav-link text-end !important" href="#">About</a>
+          <a class="nav-link-custom nav-link active" aria-current="page" href="/">Home</a>
+          <a class="nav-link text-end !important" href="/about.html">About</a>
           <a class="nav-link text-end !important" href="#">Portfolio</a>
           <a class="nav-link text-end !important" href="#">Certifications</a>
           <a class="nav-link text-end !important" href="#">Contact</a>
@@ -39,7 +39,7 @@
   <header>
   <div class="row">
     <div><img src="/images/profile-picture.jpg" alt="profile-picture" class="responsive-profile-picture img-fluid d-sm-block d-md-none"></div>
-    <div class="col-sm-7">
+    <div class="col-md-7">
       <h2>Hi, I am</h2>
       <h1>Verena Al-Khazraji</h1>
         <p class="header-paragraph">I am a Vienna-based Front-end Developer. 
@@ -47,9 +47,9 @@
           Find me on <a href="#" target="_blank" class="header-links">LinkedIn</a>, <a href="#" target="_blank" class="header-links">Instagram</a> and <a href="#" target="_blank" class="header-links">Github</a>.
         </p>
 
-      <div class="header-buttons">
-        <a href="#" class="button-primary">My projects</a>
-        <a href="#" class="button-primary">Certificates</a>
+      <div class="header-buttons-container">
+        <a href="#" class="button-primary header-button">My projects</a>
+        <a href="#" class="button-primary header-button">Certificates</a>
       </div>
     </div>
  
@@ -86,12 +86,19 @@
           <li>Netlify</li>
         </ul>
       </div>
+      <div class="skill-list">
+        <ul>
+          <li>Media Queries</li>
+          <li>Figma</li>
+          
+        </ul>
+      </div>
     </div>
 </main>
 
 <div class="work-inquiry">
     <div class="work-inquiry-text">
-      <h2 class="h2-start">Work Inquiry</h2>
+      <h2 class="heading-start">Work Inquiry</h2>
       <p>Let's talk about cooperations and work together.</p>
     </div>
 
