--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
         <div class="about-text-container">
             <h1 class="heading-start">Hi, I am Verena</h1>
             <h3 class="heading-start">Front-end Developer based in Vienna</h3>
-            <p class="mb-5">Diving into the digital world of Web Development has been an insightful journey full of learning and self-discovery. Writing code has become part of my daily routine and gives me the opportunity to excel in this new creative task of crafting well-written and maintainable code while providing visually appealing user experiences. Coding is not just my new profession, but also my new found passion. Apart from coding I love nature, long city walks, good talks and feminism. I invite you to explore <a href="">my projects</a>, connect with me on <a href="">social media</a> and join me on this exciting journey of innovation and discovery in the world of web development.</p>
+            <p class="mb-5">Diving into the digital world of Web Development has been an insightful journey full of learning and self-discovery. Writing code has become part of my daily routine and gives me the opportunity to excel in this new creative task of crafting well-written and maintainable code while providing visually appealing user experiences. Coding is not just my new profession, but my new found passion. Apart from coding I love nature, long city walks, good talks and feminism. I invite you to explore <a href="">my projects</a>, connect with me on <a href="">social media</a> and join me on this exciting journey of innovation and discovery in the world of web development.</p>
             <a href="#" class="button-primary">Download CV</a>
         </div>
         </div>
