set up portfolio page

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
             <div class="navbar-nav ms-auto">
               <a class="nav-link" aria-current="page" href="/">Home</a>
               <a class="nav-link-custom nav-link active text-end !important" href="/about.html">About</a>
-              <a class="nav-link text-end !important" href="#">Portfolio</a>
+              <a class="nav-link text-end !important" href="/work.html">Portfolio</a>
               <a class="nav-link text-end !important" href="#">Certifications</a>
               <a class="nav-link text-end !important" href="#">Contact</a>
             </div>
