--- a/work.html
+++ b/work.html
@@ -13,7 +13,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="src/style.css">
-        <title>MY portfolio</title>
+        <title>My portfolio</title>
     </head>
 <body>
     <nav class="navbar navbar-expand-sm bg-body-tertiary navbar-color" style="background-color: #F6F7F0 !important;">
@@ -34,16 +34,71 @@
         </div>
       </nav>
 
-    <h1 class="mt-4">Check out my projects</h1>
+<div class="portfolio-container">
 
-      <div class="card card-custom" style="width: 18rem;">
-        <img class="card-img-top" src="/images/weather-app.png" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Weather App</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn button-primary">Take a tour</a>
+    <h1 class="text-start mt-5 mb-5"><i class="fa-solid fa-code"></i> Check out my projects</h1>
+
+    <div class="card-deck">
+      <div class="row">
+
+        <div class="col-md-4">
+          <div class="card-custom text-center mb-4 card">
+            <img class="card-image-custom card-img-top" src="/images/weather-app.png" alt="Card image cap" />
+            <div class="card-body">
+              <h5 class="card-title">Weather App</h5>
+              <p class="mb-2 card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          <div class="card-footer">
+            <small class="text-muted"><a href="#" class="btn button-primary">Take a tour</a></small>
+          </div>
+          </div>
         </div>
-      </div>
+
+        <div class="col-md-4">
+          <div class="card-custom text-center mb-4 card">
+            <img class="card-image-custom card-img-top" src="/images/AI-definitions-generator.png" alt="Card image cap" />
+            <div class="card-body">
+              <h5 class="card-title">AI Definition Generator</h5>
+              <p class="mb-2 card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          <div class="card-footer">
+            <small class="text-muted"><a href="#" class="btn button-primary">Take a tour</a></small>
+          </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card-custom text-center mb-4 card">
+            <img class="card-image-custom card-img-top" src="/images/world-clock.png" alt="Card image cap" />
+            <div class="card-body">
+              <h5 class="card-title">World Clock</h5>
+              <p class="mb-2 card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          <div class="card-footer">
+            <small class="text-muted"><a href="#" class="btn button-primary">Take a tour</a></small>
+          </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card-custom text-center mb-4 card">
+           <img class="card-image-custom card-img-top" src="/images/yoga-website.png" alt="Card image cap" />
+            <div class="card-body">
+              <h5 class="card-title">Yoga Website</h5>
+              <p class="mb-2 card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          <div class="card-footer">
+            <small class="text-muted"><a href="#" class="btn button-primary">Take a tour</a></small>
+          </div>
+          </div>
+        </div>
+
+    </div>
+    </div>
+
+   
+</div>   
+   
 
 </body>
 </html>
