made portfolio page responsive

--- a/work.html
+++ b/work.html
@@ -41,9 +41,9 @@
     <div class="card-deck">
       <div class="row">
 
-        <div class="col-md-4">
-          <div class="card-custom text-center mb-4 card">
-            <img class="card-image-custom card-img-top" src="/images/weather-app.png" alt="Card image cap" />
+        <div class="col-lg-4">
+          <div class="card-custom text-center card">
+            <img class="card-image-custom img-fluid card-img-top" src="/images/weather-app.png" alt="Card image cap" />
             <div class="card-body">
               <h5 class="card-title">Weather App</h5>
               <p class="mb-2 card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -54,9 +54,9 @@
           </div>
         </div>
 
-        <div class="col-md-4">
-          <div class="card-custom text-center mb-4 card">
-            <img class="card-image-custom card-img-top" src="/images/AI-definitions-generator.png" alt="Card image cap" />
+        <div class="col-lg-4">
+          <div class="card-custom text-center card">
+            <img class="card-image-custom img-fluid card-img-top" src="/images/AI-definitions-generator.png" alt="Card image cap" />
             <div class="card-body">
               <h5 class="card-title">AI Definition Generator</h5>
               <p class="mb-2 card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -67,8 +67,8 @@
           </div>
         </div>
 
-        <div class="col-md-4">
-          <div class="card-custom text-center mb-4 card">
+        <div class="col-lg-4">
+          <div class="card-custom img-fluid text-center card">
             <img class="card-image-custom card-img-top" src="/images/world-clock.png" alt="Card image cap" />
             <div class="card-body">
               <h5 class="card-title">World Clock</h5>
@@ -80,9 +80,9 @@
           </div>
         </div>
 
-        <div class="col-md-4">
-          <div class="card-custom text-center mb-4 card">
-           <img class="card-image-custom card-img-top" src="/images/yoga-website.png" alt="Card image cap" />
+        <div class="col-lg-4">
+          <div class="card-custom text-center card">
+           <img class="card-image-custom img-fluid card-img-top" src="/images/yoga-website.png" alt="Card image cap" />
             <div class="card-body">
               <h5 class="card-title">Yoga Website</h5>
               <p class="mb-2 card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
