setup contact page

--- a/about.html
+++ b/about.html
@@ -28,21 +28,21 @@
               <a class="nav-link-custom nav-link active text-end !important" href="/about.html">About</a>
               <a class="nav-link text-end !important" href="/work.html">Portfolio</a>
               <a class="nav-link text-end !important" href="#">Certifications</a>
-              <a class="nav-link text-end !important" href="#">Contact</a>
+              <a class="nav-link text-end !important" href="/contact.html">Contact</a>
             </div>
           </div>
         </div>
       </nav>
 
   
-        <div class="about">
-        <div class="about-img-container">
-            <img src="/images/about-picture.jpg" alt="about-picture" class="about-picture img-fluid">
+        <div class="content">
+        <div class="content-img-container">
+            <img src="/images/about-picture.jpg" alt="about-picture" class="content-picture img-fluid">
         </div>
-        <div class="about-text-container">
+        <div class="content-text-container">
             <h1 class="heading-start">Hi, I am Verena</h1>
             <h3 class="heading-start">Front-end Developer based in Vienna</h3>
-            <p class="mb-5">Diving into the digital world of Web Development has been an insightful journey full of learning and self-discovery. Writing code has become part of my daily routine and gives me the opportunity to excel in this new creative task of crafting well-written and maintainable code while providing visually appealing user experiences. Coding is not just my new profession, but my new found passion. Apart from coding I love nature, long city walks, good talks and feminism. I invite you to explore <a href="">my projects</a>, connect with me on <a href="">social media</a> and join me on this exciting journey of innovation and discovery in the world of web development.</p>
+            <p class="content-paragraph mb-5">Diving into the digital world of Web Development has been an insightful journey full of learning and self-discovery. Writing code has become part of my daily routine and gives me the opportunity to excel in this new creative task of crafting well-written and maintainable code while providing visually appealing user experiences. Coding is not just my new profession, but my new found passion. Apart from coding I love nature, long city walks, good talks and feminism. I invite you to explore <a href="">my projects</a>, connect with me on <a href="">social media</a> and join me on this exciting journey of innovation and discovery in the world of web development.</p>
             <a href="#" class="button-primary">Download CV</a>
         </div>
         </div>
