--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <a class="nav-link text-end !important" href="/about.html">About</a>
           <a class="nav-link text-end !important" href="/work.html">Portfolio</a>
           <a class="nav-link text-end !important" href="#">Certifications</a>
-          <a class="nav-link text-end !important" href="#">Contact</a>
+          <a class="nav-link text-end !important" href="/contact.html">Contact</a>
         </div>
       </div>
     </div>
