--- a/work.html
+++ b/work.html
@@ -28,13 +28,13 @@
               <a class="nav-link text-end !important" href="/about.html">About</a>
               <a class="nav-link nav-link-custom active text-end !important" href="/work.html">Portfolio</a>
               <a class="nav-link text-end !important" href="#">Certifications</a>
-              <a class="nav-link text-end !important" href="#">Contact</a>
+              <a class="nav-link text-end !important" href="/contact.html">Contact</a>
             </div>
           </div>
         </div>
       </nav>
 
-<div class="portfolio-container">
+<div class="page-container">
 
     <h1 class="text-start mt-5 mb-5"><i class="fa-solid fa-code"></i> Check out my projects</h1>
 
@@ -99,6 +99,17 @@
    
 </div>   
    
+
+<footer>
+  <div class="contact-icons">
+    <i class="fa-solid fa-square-envelope fa-2xl contact-icon"></i>
+    <i class="fa-brands fa-linkedin fa-2xl contact-icon"></i>
+    <i class="fa-brands fa-instagram fa-2xl contact-icon"></i>
+    <i class="fa-brands fa-github fa-2xl contact-icon"></i>
+  </div>
+  <p class="footer-paragraph">This website was coded by <a href="#">Verena Al-Khazraji</a>, is <a href="">open-sourced on Github</a> and <a href="">hosted on Netlify.</a></p>
+</footer>
+
 
 </body>
 </html>
