--- a/contact.html
+++ b/contact.html
@@ -35,27 +35,32 @@
         </div>
       </nav>
 
-
-<div class="page-container">
-
-   <h1>Let's get in touch</h1>
+<h1 class="mt-5">Let's get in touch</h1>
 
 <div class="contact-container text-center">
-     <h3>E-Mail</h3>
-        <a href="">verenx@gmail.com</a>
-     <h3 class="mt-4">LinkedIn</h3>
-        <a href="">Verena Al-Khazraji</a>
-     <h3 class="mt-4">Instagram</h3>
-        <a href="">verena_codes</a>
-     <h3 class="mt-4">GitHub</h3>
-         <a href="">verenx</a>
+     <div class="row">
+      <div class="col-md-6">
+        <h3 class="mt-5">E-Mail</h3>
+        <a href="">v e r e n x @ g m a i l . c o m</a>
+        <h3 class="mt-5">LinkedIn</h3>
+        <a href="">V e r e n a <span>A l - K h a z r a j i</span></a>
+      </div>
+    <div class="col-md-6">
+      <div>
+        <h3 class="mt-5">Instagram</h3>
+        <a href="">v e r e n a _ c o  d e s</a>
+        <h3 class="mt-5">GitHub</h3>
+         <a href="">v e r e n x</a>
+      </div>
+    </div>
+    </div>
 </div>
 
 <footer>
     <p class="footer-paragraph">This website was coded by <a href="#">Verena Al-Khazraji</a>, is <a href="">open-sourced on Github</a> and <a href="">hosted on Netlify.</a></p>
   </footer>
 
-</div>
+
     
 </body>
 </html>
