--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
 </div>
 
 <main>
-    <h2>Skillset</h2>
+    
     <div class="skills-list">
+      <h2>Skillset</h2>
       <div class="skill-list">
         <ul>
           <li>HTML</li>
@@ -76,7 +77,7 @@
         <ul>
           <li>Bootstrap</li>
           <li>React</li>
-          <li>Visual Studio Code</li>
+          <li>VSCode</li>
         </ul>
       </div>
       <div class="skill-list">
@@ -110,8 +111,8 @@
 
   <footer>
     <div class="contact-icons">
-      <i class="fa-solid fa-square-envelope fa-2xl contact-icon"></i>
-      <i class="fa-brands fa-linkedin fa-2xl contact-icon"></i>
+      <i class="fa-regular fa-envelope fa-2xl contact-icon"></i>
+      <i class="fa-brands fa-linkedin-in fa-2xl contact-icon"></i>
       <i class="fa-brands fa-instagram fa-2xl contact-icon"></i>
       <i class="fa-brands fa-github fa-2xl contact-icon"></i>
     </div>
