updated footer with background and hover effects

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 </div>
 
 <main>
-    
-    <div class="skills-list">
+    <div class="skills-list-container">
       <h2>Skillset</h2>
+      <div class="skills-list">
       <div class="skill-list">
         <ul>
           <li>HTML</li>
@@ -91,9 +91,9 @@
         <ul>
           <li>Media Queries</li>
           <li>Figma</li>
-          
         </ul>
       </div>
+    </div>
     </div>
 </main>
 
@@ -111,10 +111,10 @@
 
   <footer>
     <div class="contact-icons">
-      <i class="fa-regular fa-envelope fa-2xl contact-icon"></i>
-      <i class="fa-brands fa-linkedin-in fa-2xl contact-icon"></i>
-      <i class="fa-brands fa-instagram fa-2xl contact-icon"></i>
-      <i class="fa-brands fa-github fa-2xl contact-icon"></i>
+      <a href=""><i class="fa-regular fa-envelope contact-icon"></i></a>
+      <a href=""><i class="fa-brands fa-linkedin-in contact-icon"></i></a>
+      <a href=""><i class="fa-brands fa-instagram contact-icon"></i></a>
+      <a href=""><i class="fa-brands fa-github contact-icon"></i></a>
     </div>
     <p class="footer-paragraph">This website was coded by <a href="#">Verena Al-Khazraji</a>, is <a href="">open-sourced on Github</a> and <a href="">hosted on Netlify.</a></p>
   </footer>
