--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="src/style.css">
     <title>Contact me</title>
 </head>
-<body>
+<body class="contact-page">
 
     <nav class="navbar navbar-expand-sm bg-body-tertiary navbar-color" style="background-color: #F6F7F0 !important;">
         <div class="container-fluid">
@@ -35,22 +35,23 @@
         </div>
       </nav>
 
-<h1 class="mt-5">Let's get in touch</h1>
+
 
 <div class="contact-container text-center">
+  <h1 class="mb-4">Let's get in touch</h1>
      <div class="row">
       <div class="col-md-6">
-        <h3 class="mt-5">E-Mail</h3>
-        <a href="">v e r e n x @ g m a i l . c o m</a>
-        <h3 class="mt-5">LinkedIn</h3>
-        <a href="">V e r e n a <span>A l - K h a z r a j i</span></a>
+        <a href=""><i class="fa-regular fa-envelope contact-icon mt-5"></i></a><br />
+        <a href="" class="social-links">v e r e n x @ g m a i l . c o m</a><br />
+        <a href=""><i class="fa-brands fa-linkedin-in contact-icon mt-5"></i></a><br />
+        <a href="" class="social-links">V e r e n a <span>A l - K h a z r a j i</span></a>
       </div>
     <div class="col-md-6">
       <div>
-        <h3 class="mt-5">Instagram</h3>
-        <a href="">v e r e n a _ c o  d e s</a>
-        <h3 class="mt-5">GitHub</h3>
-         <a href="">v e r e n x</a>
+        <a href=""><i class="fa-brands fa-instagram contact-icon mt-5"></i></a><br />
+        <a href="" class="social-links">v e r e n a _ c o  d e s</a><br />
+        <a href=""><i class="fa-brands fa-github contact-icon mt-5"></i></a><br />
+         <a href="" class="social-links">v e r e n x</a>
       </div>
     </div>
     </div>
