--- a/contact.html
+++ b/contact.html
@@ -1,65 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="If you are interested in cooperations with Verena or have some questions, contact her here">
+    <title>Verena Al-Khazraji - Vienna-based Front-end Developer. Contact her or get in touch for more info.</title>
+    <link rel="stylesheet" href="src/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/4ccf2b3c54.js" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="src/style.css">
-    <title>Contact me</title>
+    <script src="https://kit.fontawesome.com/4ccf2b3c54.js" crossorigin="anonymous"></script> 
 </head>
 <body class="contact-page">
 
-    <nav class="navbar navbar-expand-sm bg-body-tertiary navbar-color" style="background-color: #F6F7F0 !important;">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/"><img src="/logo/logo.png" alt="" class="navbar-logo"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav ms-auto">
-              <a class="nav-link" aria-current="page" href="/">Home</a>
-              <a class="nav-link text-end !important" href="/about.html">About</a>
-              <a class="nav-link text-end !important" href="/work.html">Portfolio</a>
-              <a class="nav-link text-end !important" href="#">Certifications</a>
-              <a class="nav-link-custom nav-link active text-end !important" href="/contact.html">Contact</a>
-            </div>
-          </div>
+  <nav class="navbar navbar-expand-sm bg-body-tertiary navbar-color" style="background-color: #F6F7F0 !important;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/"><img src="/logo/logo.png" alt="Logo" class="navbar-logo" title="Home"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav ms-auto">
+          <a class="nav-link" aria-current="page" href="/">Home</a>
+          <a class="nav-link text-end !important" href="/about.html">About</a>
+          <a class="nav-link text-end !important" href="/work.html">Portfolio</a>
+          <a class="nav-link text-end !important" href="/certificates.html">Certifications</a>
+          <a class="fw-semibold nav-link active !important" href="/contact.html">Contact</a>
         </div>
-      </nav>
-
-
+      </div>
+    </div>
+  </nav>
 
 <div class="contact-container text-center">
   <h1 class="mb-4">Let's get in touch</h1>
      <div class="row">
       <div class="col-md-6">
-        <a href=""><i class="fa-regular fa-envelope contact-icon mt-5"></i></a><br />
-        <a href="" class="social-links">v e r e n x @ g m a i l . c o m</a><br />
-        <a href=""><i class="fa-brands fa-linkedin-in contact-icon mt-5"></i></a><br />
-        <a href="" class="social-links">V e r e n a <span>A l - K h a z r a j i</span></a>
+        <a href="mailto: verenx@gmail.com"><i class="fa-regular fa-envelope contact-icon mt-5"></i></a><br />
+        <a href="mailto: verenx@gmail.com" class="social-links">v e r e n x @ g m a i l . c o m</a><br />
+        <a href="https://www.linkedin.com/in/verena-al-khazraji-a73bb370/" title="LinkedIn Profile" target="_blank"><i class="fa-brands fa-linkedin-in contact-icon mt-5"></i></a><br />
+        <a href="https://www.linkedin.com/in/verena-al-khazraji-a73bb370/" title="LinkedIn Profile" target="_blank" class="social-links">V e r e n a <span>A l - K h a z r a j i</span></a>
       </div>
     <div class="col-md-6">
       <div>
-        <a href=""><i class="fa-brands fa-instagram contact-icon mt-5"></i></a><br />
-        <a href="" class="social-links">v e r e n a _ c o  d e s</a><br />
-        <a href=""><i class="fa-brands fa-github contact-icon mt-5"></i></a><br />
-         <a href="" class="social-links">v e r e n x</a>
+        <a href="https://www.instagram.com/verena_codes/?hl=en" title="Instagram Profile" target="_blank"><i class="fa-brands fa-instagram contact-icon mt-5"></i></a><br />
+        <a href="https://www.instagram.com/verena_codes/?hl=en" title="Instagram Profile" target="_blank" class="social-links">v e r e n a _ c o d e s</a><br />
+        <a href="https://github.com/verenx" title="Github Profile" target="_blank"><i class="fa-brands fa-github contact-icon mt-5"></i></a><br />
+         <a href="https://github.com/verenx" title="Github Profile" target="_blank" class="social-links">v e r e n x</a>
       </div>
     </div>
     </div>
 </div>
 
 <footer>
-    <p class="footer-paragraph">This website was coded by <a href="#">Verena Al-Khazraji</a>, is <a href="">open-sourced on Github</a> and <a href="">hosted on Netlify.</a></p>
-  </footer>
+  <p class="footer-paragraph">This website was coded by <a href="https://www.linkedin.com/in/verena-al-khazraji-a73bb370/" target="_blank" title="LinkedIn Profile">Verena Al-Khazraji</a>, is <a href="https://github.com/verenx" target="_blank" title="Github Profile">open-sourced on Github</a> and <a href="https://verena-frontend.netlify.app/" target="_blank" title="Netlify Website">hosted on Netlify.</a></p>
+</footer>
 
 
     
