--- a/index.html
+++ b/index.html
@@ -3,33 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is the website of Verena Al-Khazraji, who is a Vienna-based Front-end Developer. Get to know more about her and her projects here.">
+    <title>Verena Al-Khazraji - Vienna-based Front-end Developer</title>
+    <link rel="stylesheet" href="src/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/4ccf2b3c54.js" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="src/style.css">
-    <title>Verena Al-Khazraji - Vienna-based Front-end Developer</title>
+    <script src="https://kit.fontawesome.com/4ccf2b3c54.js" crossorigin="anonymous"></script> 
 </head>
-<body>
 
+<body>
 <div class="homepage-container">
   <nav class="navbar navbar-expand-sm bg-body-tertiary navbar-color" style="background-color: #F6F7F0 !important;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/"><img src="/logo/logo.png" alt="" class="navbar-logo"></a>
+      <a class="navbar-brand" href="/"><img src="/logo/logo.png" alt="Logo" class="navbar-logo" title="Home"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto">
-          <a class="nav-link-custom nav-link active" aria-current="page" href="/">Home</a>
+          <a class="fw-semibold nav-link active" aria-current="page" href="/">Home</a>
           <a class="nav-link text-end !important" href="/about.html">About</a>
           <a class="nav-link text-end !important" href="/work.html">Portfolio</a>
-          <a class="nav-link text-end !important" href="#">Certifications</a>
+          <a class="nav-link text-end !important" href="/certificates.html">Certifications</a>
           <a class="nav-link text-end !important" href="/contact.html">Contact</a>
         </div>
       </div>
@@ -38,24 +39,24 @@
   
   <header>
   <div class="row">
-    <div><img src="/images/profile-picture.jpg" alt="profile-picture" class="responsive-profile-picture img-fluid d-sm-block d-md-none"></div>
+    <div><img src="/images/profile-picture.jpg" alt="profile-picture" class="responsive-profile-picture img-fluid d-sm-block d-md-none" title="Profile Picture"></div>
     <div class="col-md-7">
       <h2>Hi, I am</h2>
       <h1>Verena Al-Khazraji</h1>
         <p class="header-paragraph">I am a Vienna-based Front-end Developer. 
           For building websites and apps I use HTML, CSS, Bootstrap and Javascript.
-          Find me on <a href="#" target="_blank" class="header-links">LinkedIn</a>, <a href="#" target="_blank" class="header-links">Instagram</a> and <a href="#" target="_blank" class="header-links">Github</a>.
+          Find me on <a href="https://www.linkedin.com/in/verena-al-khazraji-a73bb370/" target="_blank" class="header-links" title="LinkedIn">LinkedIn</a>, <a href="https://www.instagram.com/verena_codes/?hl=en" target="_blank" class="header-links" title="Instagram">Instagram</a> and <a href="https://github.com/verenx" target="_blank" class="header-links" title="Github">Github</a>.
         </p>
 
       <div class="header-buttons-container">
-        <a href="#" class="button-primary header-button">My projects</a>
-        <a href="#" class="button-primary header-button">Certificates</a>
+        <a href="/work.html" class="button-primary header-button" title="Verena's projects">My projects</a>
+        <a href="/certificates.html" class="button-primary header-button" title="Verena's certificates">Certificates</a>
       </div>
     </div>
  
   <div class="col-5 d-none d-md-block">
     <div class="header-image ms-4">
-      <img src="/images/profile-picture.jpg" alt="profile-picture" class="profile-picture img-fluid">
+      <img src="/images/profile-picture.jpg" alt="profile-picture" class="profile-picture img-fluid" title="Profile Picture">
     </div>
   </div>
  </div>
@@ -104,19 +105,19 @@
     </div>
 
     <div class="work-inquiry-button">
-      <a href="#" class="button-primary">Get in touch</a>
+      <a href="/contact.html" class="button-primary" title="Contact me">Get in touch</a>
     </div>
 </div>
 
 
   <footer>
     <div class="contact-icons">
-      <a href=""><i class="fa-regular fa-envelope contact-icon"></i></a>
-      <a href=""><i class="fa-brands fa-linkedin-in contact-icon"></i></a>
-      <a href=""><i class="fa-brands fa-instagram contact-icon"></i></a>
-      <a href=""><i class="fa-brands fa-github contact-icon"></i></a>
+      <a href="mailto: verenx@gmail.com" title="My E-Mail"><i class="fa-regular fa-envelope contact-icon" title="E-Mail"></i></a>
+      <a href="https://www.linkedin.com/in/verena-al-khazraji-a73bb370/" title="LinkedIn Profile" target="_blank"><i class="fa-brands fa-linkedin-in contact-icon" title="LinkedIn Profile"></i></a>
+      <a href="https://www.instagram.com/verena_codes/?hl=en" title="Instagram Profile" target="_blank"><i class="fa-brands fa-instagram contact-icon" title="Instagram Profile"></i></a>
+      <a href="https://github.com/verenx" title="Github Profile" target="_blank"><i class="fa-brands fa-github contact-icon" title="Github Profile"></i></a>
     </div>
-    <p class="footer-paragraph">This website was coded by <a href="#">Verena Al-Khazraji</a>, is <a href="">open-sourced on Github</a> and <a href="">hosted on Netlify.</a></p>
+    <p class="footer-paragraph">This website was coded by <a href="https://www.linkedin.com/in/verena-al-khazraji-a73bb370/" target="_blank" title="LinkedIn Profile">Verena Al-Khazraji</a>, is <a href="https://github.com/verenx" target="_blank" title="Github Profile">open-sourced on Github</a> and <a href="https://verena-frontend.netlify.app/" target="_blank" title="Netlify Website">hosted on Netlify.</a></p>
   </footer>
     
 </body>
