--- a/work.html
+++ b/work.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/4ccf2b3c54.js" crossorigin="anonymous"></script>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="src/style.css">
-        <title>My portfolio</title>
-    </head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Check out Verena's project here and find out about her code writing.">
+    <title>Verena's projects - find out more about her coding</title>
+    <link rel="stylesheet" href="src/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/4ccf2b3c54.js" crossorigin="anonymous"></script> 
+</head>
 <body>
-    <nav class="navbar navbar-expand-sm bg-body-tertiary navbar-color" style="background-color: #F6F7F0 !important;">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/"><img src="/logo/logo.png" alt="" class="navbar-logo"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav ms-auto">
-              <a class="nav-link text-end !important" aria-current="page" href="/">Home</a>
-              <a class="nav-link text-end !important" href="/about.html">About</a>
-              <a class="nav-link nav-link-custom active text-end !important" href="/work.html">Portfolio</a>
-              <a class="nav-link text-end !important" href="#">Certifications</a>
-              <a class="nav-link text-end !important" href="/contact.html">Contact</a>
-            </div>
-          </div>
+
+  <nav class="navbar navbar-expand-sm bg-body-tertiary navbar-color" style="background-color: #F6F7F0 !important;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/"><img src="/logo/logo.png" alt="Logo" class="navbar-logo" title="Home"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav ms-auto">
+          <a class="nav-link text-end !important" aria-current="page" href="/">Home</a>
+          <a class="nav-link text-end !important" href="/about.html">About</a>
+          <a class="fw-semibold nav-link active text-end !important" href="/work.html">Portfolio</a>
+          <a class="nav-link text-end !important" href="/certificates.html">Certifications</a>
+          <a class="nav-link text-end !important" href="/contact.html">Contact</a>
         </div>
-      </nav>
+      </div>
+    </div>
+  </nav>
 
 <div class="page-container">
 
@@ -40,59 +42,57 @@
 
     <div class="card-deck">
       <div class="row">
-
         <div class="col-lg-4">
           <div class="card-custom text-center card">
-            <img class="card-image-custom img-fluid card-img-top" src="/images/weather-app.png" alt="Card image cap" />
+            <img class="card-image-custom img-fluid card-img-top" src="/images/weather-app.png" alt="Card image cap" title="Weather App"/>
             <div class="card-body">
               <h5 class="card-title">Weather App</h5>
               <p class="mb-2 card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
           <div class="card-footer">
-            <small class="text-muted"><a href="#" class="btn button-primary">Take a tour</a></small>
+            <small class="text-muted"><a href="https://shecodes-weather-app-verenx.netlify.app/" class="btn button-primary" title="My weather app project" target="_blank">Take a tour</a></small>
           </div>
           </div>
         </div>
 
         <div class="col-lg-4">
           <div class="card-custom text-center card">
-            <img class="card-image-custom img-fluid card-img-top" src="/images/AI-definitions-generator.png" alt="Card image cap" />
+            <img class="card-image-custom img-fluid card-img-top" src="/images/AI-definitions-generator.png" alt="Card image cap" title="AI Definition Generator"/>
             <div class="card-body">
               <h5 class="card-title">AI Definition Generator</h5>
               <p class="mb-2 card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
           <div class="card-footer">
-            <small class="text-muted"><a href="#" class="btn button-primary">Take a tour</a></small>
+            <small class="text-muted"><a href="https://verenx-word-definitions-generator.netlify.app/" class="btn button-primary" title="My AI Generator" target="_blank">Take a tour</a></small>
           </div>
           </div>
         </div>
 
         <div class="col-lg-4">
           <div class="card-custom img-fluid text-center card">
-            <img class="card-image-custom card-img-top" src="/images/world-clock.png" alt="Card image cap" />
+            <img class="card-image-custom card-img-top" src="/images/world-clock.png" alt="Card image cap" title="World Clock Project"/>
             <div class="card-body">
               <h5 class="card-title">World Clock</h5>
               <p class="mb-2 card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
           <div class="card-footer">
-            <small class="text-muted"><a href="#" class="btn button-primary">Take a tour</a></small>
+            <small class="text-muted"><a href="https://app.netlify.com/sites/world-clock-verenx/overview" class="btn button-primary" title="My world clock website" target="_blank">Take a tour</a></small>
           </div>
           </div>
         </div>
 
         <div class="col-lg-4">
           <div class="card-custom text-center card">
-           <img class="card-image-custom img-fluid card-img-top" src="/images/yoga-website.png" alt="Card image cap" />
+           <img class="card-image-custom img-fluid card-img-top" src="/images/yoga-website.png" alt="Card image cap" title="Yoga website"/>
             <div class="card-body">
               <h5 class="card-title">Yoga Website</h5>
               <p class="mb-2 card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
           <div class="card-footer">
-            <small class="text-muted"><a href="#" class="btn button-primary">Take a tour</a></small>
+            <small class="text-muted"><a href="https://yoga-mit-maria.netlify.app/" class="btn button-primary" title="My yoga website" target="_blank">Take a tour</a></small>
           </div>
           </div>
         </div>
-
     </div>
     </div>
 
@@ -102,13 +102,12 @@
 
 <footer>
   <div class="contact-icons">
-    <a href=""><i class="fa-regular fa-envelope contact-icon"></i></a>
-    <a href=""><i class="fa-brands fa-linkedin-in contact-icon"></i></a>
-    <a href=""><i class="fa-brands fa-instagram contact-icon"></i></a>
-    <a href=""><i class="fa-brands fa-github contact-icon"></i></a>
+    <a href="mailto: verenx@gmail.com" title="My E-Mail"><i class="fa-regular fa-envelope contact-icon" title="E-Mail"></i></a>
+    <a href="https://www.linkedin.com/in/verena-al-khazraji-a73bb370/" title="LinkedIn Profile" target="_blank"><i class="fa-brands fa-linkedin-in contact-icon" title="LinkedIn Profile"></i></a>
+    <a href="https://www.instagram.com/verena_codes/?hl=en" title="Instagram Profile" target="_blank"><i class="fa-brands fa-instagram contact-icon" title="Instagram Profile"></i></a>
+    <a href="https://github.com/verenx" title="Github Profile" target="_blank"><i class="fa-brands fa-github contact-icon" title="Github Profile"></i></a>
   </div>
-  <p class="footer-paragraph">This website was coded by <a href="#">Verena Al-Khazraji</a>, is <a href="">open-sourced on Github</a> and <a href="">hosted on Netlify.</a></p>
+  <p class="footer-paragraph">This website was coded by <a href="https://www.linkedin.com/in/verena-al-khazraji-a73bb370/" target="_blank" title="LinkedIn Profile">Verena Al-Khazraji</a>, is <a href="https://github.com/verenx" target="_blank" title="Github Profile">open-sourced on Github</a> and <a href="https://verena-frontend.netlify.app/" target="_blank" title="Netlify Website">hosted on Netlify.</a></p>
 </footer>
-
 </body>
 </html>
