corrected margins and paddings on all sites

--- a/contact.html
+++ b/contact.html
@@ -40,16 +40,16 @@
   <h1 class="mb-4">Let's get in touch</h1>
      <div class="row">
       <div class="col-md-6">
-        <a href="mailto: verenx@gmail.com"><i class="fa-regular fa-envelope contact-icon mt-5"></i></a><br />
+        <a href="mailto: verenx@gmail.com"><i class="fa-regular fa-envelope contact-icon mt-5 mb-2"></i></a><br />
         <a href="mailto: verenx@gmail.com" class="social-links">v e r e n x @ g m a i l . c o m</a><br />
-        <a href="https://www.linkedin.com/in/verena-al-khazraji-a73bb370/" title="LinkedIn Profile" target="_blank"><i class="fa-brands fa-linkedin-in contact-icon mt-5"></i></a><br />
+        <a href="https://www.linkedin.com/in/verena-al-khazraji-a73bb370/" title="LinkedIn Profile" target="_blank"><i class="fa-brands fa-linkedin-in contact-icon mt-5 mb-2"></i></a><br />
         <a href="https://www.linkedin.com/in/verena-al-khazraji-a73bb370/" title="LinkedIn Profile" target="_blank" class="social-links">V e r e n a <span>A l - K h a z r a j i</span></a>
       </div>
     <div class="col-md-6">
       <div>
-        <a href="https://www.instagram.com/verena_codes/?hl=en" title="Instagram Profile" target="_blank"><i class="fa-brands fa-instagram contact-icon mt-5"></i></a><br />
+        <a href="https://www.instagram.com/verena_codes/?hl=en" title="Instagram Profile" target="_blank"><i class="fa-brands fa-instagram contact-icon mt-5 mb-2"></i></a><br />
         <a href="https://www.instagram.com/verena_codes/?hl=en" title="Instagram Profile" target="_blank" class="social-links">v e r e n a _ c o d e s</a><br />
-        <a href="https://github.com/verenx" title="Github Profile" target="_blank"><i class="fa-brands fa-github contact-icon mt-5"></i></a><br />
+        <a href="https://github.com/verenx" title="Github Profile" target="_blank"><i class="fa-brands fa-github contact-icon mt-5 mb-2"></i></a><br />
          <a href="https://github.com/verenx" title="Github Profile" target="_blank" class="social-links">v e r e n x</a>
       </div>
     </div>
