worked on the work page, cards need to be redone

--- a/work.html
+++ b/work.html
@@ -44,39 +44,39 @@
       <div class="row">
         <div class="col-lg-4">
           <div class="card-custom text-center card">
-            <img class="card-image-custom img-fluid card-img-top" src="/images/weather-app.png" alt="Card image cap" title="Weather App"/>
+            <div class="card-image-container"><img class="card-image-custom img-fluid card-img-top" src="/images/weather-app.png" alt="Card image cap" title="Weather App"/></div>
             <div class="card-body">
               <h5 class="card-title">Weather App</h5>
               <p class="mb-2 card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
-          <div class="card-footer">
-            <small class="text-muted"><a href="https://shecodes-weather-app-verenx.netlify.app/" class="btn button-primary" title="My weather app project" target="_blank">Take a tour</a></small>
+          <div class="card-footer pt-3 pb-3">
+            <small class="text-muted"><a href="https://shecodes-weather-app-verenx.netlify.app/" class="button-primary" title="My weather app project" target="_blank">Take a tour</a></small>
           </div>
           </div>
         </div>
 
         <div class="col-lg-4">
           <div class="card-custom text-center card">
-            <img class="card-image-custom img-fluid card-img-top" src="/images/AI-definitions-generator.png" alt="Card image cap" title="AI Definition Generator"/>
+            <div class="card-image-container"><img class="card-image-custom img-fluid card-img-top" src="/images/AI-definitions-generator.png" alt="Card image cap" title="AI Definition Generator"/></div>
             <div class="card-body">
               <h5 class="card-title">AI Definition Generator</h5>
               <p class="mb-2 card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
-          <div class="card-footer">
-            <small class="text-muted"><a href="https://verenx-word-definitions-generator.netlify.app/" class="btn button-primary" title="My AI Generator" target="_blank">Take a tour</a></small>
+          <div class="card-footer pt-3 pb-3">
+            <small class="text-muted"><a href="https://verenx-word-definitions-generator.netlify.app/" class="button-primary" title="My AI Generator" target="_blank">Take a tour</a></small>
           </div>
           </div>
         </div>
 
         <div class="col-lg-4">
-          <div class="card-custom img-fluid text-center card">
-            <img class="card-image-custom card-img-top" src="/images/world-clock.png" alt="Card image cap" title="World Clock Project"/>
+          <div class="card-custom text-center card">
+            <div class="card-image-container"><img class="card-image-custom img-fluid card-img-top" src="/images/world-clock.png" alt="Card image cap" title="World Clock Project"/></div>
             <div class="card-body">
               <h5 class="card-title">World Clock</h5>
               <p class="mb-2 card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
-          <div class="card-footer">
-            <small class="text-muted"><a href="https://app.netlify.com/sites/world-clock-verenx/overview" class="btn button-primary" title="My world clock website" target="_blank">Take a tour</a></small>
+          <div class="card-footer pt-3 pb-3">
+            <small class="text-muted"><a href="https://app.netlify.com/sites/world-clock-verenx/overview" class="button-primary" title="My world clock website" target="_blank">Take a tour</a></small>
           </div>
           </div>
         </div>
@@ -88,8 +88,8 @@
               <h5 class="card-title">Yoga Website</h5>
               <p class="mb-2 card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
-          <div class="card-footer">
-            <small class="text-muted"><a href="https://yoga-mit-maria.netlify.app/" class="btn button-primary" title="My yoga website" target="_blank">Take a tour</a></small>
+          <div class="card-footer pt-3 pb-3">
+            <small class="text-muted"><a href="https://yoga-mit-maria.netlify.app/" class="button-primary" title="My yoga website" target="_blank">Take a tour</a></small>
           </div>
           </div>
         </div>
