deleted bootstrap cards on work page and build custom cards

--- a/work.html
+++ b/work.html
@@ -38,65 +38,62 @@
 
 <div class="page-container">
 
-    <h1 class="text-start mt-5 mb-5"><i class="fa-solid fa-code"></i> Check out my projects</h1>
+<h1 class="text-start mt-5 mb-5"><i class="fa-solid fa-code"></i> Check out my projects</h1>
 
-    <div class="card-deck">
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="card-custom text-center card">
-            <div class="card-image-container"><img class="card-image-custom img-fluid card-img-top" src="/images/weather-app.png" alt="Card image cap" title="Weather App"/></div>
-            <div class="card-body">
-              <h5 class="card-title">Weather App</h5>
-              <p class="mb-2 card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-          <div class="card-footer pt-3 pb-3">
-            <small class="text-muted"><a href="https://shecodes-weather-app-verenx.netlify.app/" class="button-primary" title="My weather app project" target="_blank">Take a tour</a></small>
-          </div>
-          </div>
-        </div>
+<div class="row">
+<div class="col-md-4">
+  <div class="project-container text-center">
+    <div class="project-img-container"><img src="/images/weather-app.png" alt="Weather Project Photo" class="project-img-custom" /></div>
+    <hr />
+    <h4 class="mt-2">Weather App</h4>
+    <p>Built with HTML, CSS, Javascript and Weather API. Created in the course of SheCodes coding classes.</p>
+    <hr class="mb-4" />
+  <div class="project-container-footer mb-2">
+    <a href="https://shecodes-weather-app-verenx.netlify.app" class="button-primary" target="_blank">Take a tour</a>
+  </div>
+</div>
+</div>
+<div class="col-md-4">
+  <div class="project-container text-center">
+    <div class="project-img-container"><img src="/images/world-clock.png" alt="Weather Project Photo" class="project-img-custom" /></div>
+    <hr />
+    <h4 class="mt-2">World clock</h4>
+    <p> Built with HTML, CSS, Javascript and moment.js. Created in the course of SheCodes coding classes.</p>
+    <hr class="mb-4" />
+  <div class="project-container-footer mb-2">
+    <a href="https://world-clock-verenx.netlify.app" class="button-primary" target="_blank">Take a tour</a>
+  </div>
+</div>
+</div>
+<div class="col-md-4">
+  <div class="project-container text-center">
+    <div class="project-img-container"><img src="/images/AI-definitions-generator.png" alt="Weather Project Photo" class="project-img-custom"/></div>
+    <hr />
+    <h4 class="mt-2">AI Definition Generator</h4>
+    <p>Built with HTML, CSS, Javascript and AI API. Created in the course of SheCodes coding classes.</p>
+    <hr class="mb-4" />
+  <div class="project-container-footer mb-2">
+    <a href="https://verenx-word-definitions-generator.netlify.app" class="button-primary" target="_blank">Take a tour</a>
+  </div>
+</div>
 
-        <div class="col-lg-4">
-          <div class="card-custom text-center card">
-            <div class="card-image-container"><img class="card-image-custom img-fluid card-img-top" src="/images/AI-definitions-generator.png" alt="Card image cap" title="AI Definition Generator"/></div>
-            <div class="card-body">
-              <h5 class="card-title">AI Definition Generator</h5>
-              <p class="mb-2 card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-          <div class="card-footer pt-3 pb-3">
-            <small class="text-muted"><a href="https://verenx-word-definitions-generator.netlify.app/" class="button-primary" title="My AI Generator" target="_blank">Take a tour</a></small>
-          </div>
-          </div>
-        </div>
+</div>
 
-        <div class="col-lg-4">
-          <div class="card-custom text-center card">
-            <div class="card-image-container"><img class="card-image-custom img-fluid card-img-top" src="/images/world-clock.png" alt="Card image cap" title="World Clock Project"/></div>
-            <div class="card-body">
-              <h5 class="card-title">World Clock</h5>
-              <p class="mb-2 card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-          <div class="card-footer pt-3 pb-3">
-            <small class="text-muted"><a href="https://app.netlify.com/sites/world-clock-verenx/overview" class="button-primary" title="My world clock website" target="_blank">Take a tour</a></small>
-          </div>
-          </div>
-        </div>
+<div class="col-md-4">
+  <div class="project-container text-center">
+    <div class="project-img-container"><img src="/images/yoga-website.png" alt="Weather Project Photo" class="project-img-custom" /></div>
+    <hr />
+    <h4 class="mt-2">Yoga Website</h4>
+    <p>Built with HTML, CSS and Javascript. Created in the course of SheCodes coding classes.</p>
+    <hr class="mb-4" />
+  <div class="project-container-footer mb-2">
+    <a href="https://yoga-mit-maria.netlify.app" class="button-primary" target="_blank">Take a tour</a>
+  </div>
+</div>
 
-        <div class="col-lg-4">
-          <div class="card-custom text-center card">
-           <img class="card-image-custom img-fluid card-img-top" src="/images/yoga-website.png" alt="Card image cap" title="Yoga website"/>
-            <div class="card-body">
-              <h5 class="card-title">Yoga Website</h5>
-              <p class="mb-2 card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-          <div class="card-footer pt-3 pb-3">
-            <small class="text-muted"><a href="https://yoga-mit-maria.netlify.app/" class="button-primary" title="My yoga website" target="_blank">Take a tour</a></small>
-          </div>
-          </div>
-        </div>
-    </div>
-    </div>
+</div>
 
-   
+</div>
 </div>   
    
 
