worked on the color design of page

--- a/about.html
+++ b/about.html
@@ -20,9 +20,9 @@
 </head>
 <body>
 
-  <nav class="navbar navbar-expand-sm bg-body-tertiary navbar-color" style="background-color: #F6F7F0 !important;">
+  <nav class="navbar navbar-expand-sm bg-body-tertiary navbar-color" style="background-color:#eae2d9 !important;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/"><img src="/logo/logo.png" alt="Logo" class="navbar-logo" title="Home"></a>
+      <a class="navbar-brand" href="/"><img src="/logo/light-beige-logo.png" alt="Logo" class="navbar-logo" title="Home"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -45,7 +45,7 @@
         <div class="content-text-container">
             <h1 class="heading-start">Hi, I am Verena</h1>
             <h3 class="heading-start">Front-end Developer based in Vienna</h3>
-            <p class="content-paragraph mb-5">Diving into the digital world of Web Development has been an insightful journey full of learning and self-discovery. Writing code has become part of my daily routine and gives me the opportunity to excel in this new creative task of crafting well-written and maintainable code while providing visually appealing user experiences. Coding is not just my new profession, but my new found passion. Apart from coding I love nature, long city walks, good talks and feminism. I invite you to explore <a href="">my projects</a>, connect with me on <a href="">social media</a> and join me on this exciting journey of innovation and discovery in the world of web development.</p>
+            <p class="content-paragraph mb-5">Diving into the digital world of web development has been an enlightening journey filled with learning and self-discovery. Crafting code is now an integral part of my daily life, allowing me to excel in creating well-structured, maintainable code that delivers visually appealing user experiences. Coding has transformed from a new profession into a passionate pursuit. Beyond coding, I cherish nature, city walks, engaging conversations, and supporting feminism. I invite you to explore my projects, connect with me on social media, and join me on this exciting journey of innovation in web development.</p>
             <a href="#" class="button-primary" title="My CV" target="_blank">Download CV</a>
         </div>
         </div>
