--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
 
 <body>
 <div class="homepage-container">
-  <nav class="navbar navbar-expand-sm bg-body-tertiary navbar-color" style="background-color: #F6F7F0 !important;">
+  <nav class="navbar navbar-expand-sm bg-body-tertiary navbar-color" style="background-color:#eae2d9 !important;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/"><img src="/logo/logo.png" alt="Logo" class="navbar-logo" title="Home"></a>
+      <a class="navbar-brand" href="/"><img src="/logo/light-beige-logo.png" alt="Logo" class="navbar-logo" title="Home"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto">
           <a class="fw-semibold nav-link active" aria-current="page" href="/">Home</a>
-          <a class="nav-link text-end !important" href="/about.html">About</a>
-          <a class="nav-link text-end !important" href="/work.html">Portfolio</a>
-          <a class="nav-link text-end !important" href="/certificates.html">Certifications</a>
-          <a class="nav-link text-end !important" href="/contact.html">Contact</a>
+          <a class="nav-link text-end !important " href="/about.html">About</a>
+          <a class="nav-link text-end !important " href="/work.html">Portfolio</a>
+          <a class="nav-link text-end !important " href="/certificates.html">Certifications</a>
+          <a class="nav-link text-end !important " href="/contact.html">Contact</a>
         </div>
       </div>
     </div>
@@ -46,7 +46,7 @@
       <h2>Hi, I am</h2>
       <h1>Verena Al-Khazraji</h1>
         <p class="header-paragraph">I am a Vienna-based Front-end Developer. 
-          For building websites and apps I use HTML, CSS, Bootstrap and Javascript.
+          For building websites and apps I use HTML, CSS, Javascript and React.
           Find me on <a href="https://www.linkedin.com/in/verena-al-khazraji-a73bb370/" target="_blank" class="header-links" title="LinkedIn">LinkedIn</a>, <a href="https://www.instagram.com/verena_codes/?hl=en" target="_blank" class="header-links" title="Instagram">Instagram</a> and <a href="https://github.com/verenx" target="_blank" class="header-links" title="Github">Github</a>.
         </p>
 
@@ -86,13 +86,13 @@
       <div class="skill-list">
         <ul>
           <li>Github</li>
-          <li>Git</li>
           <li>Netlify</li>
+          <li>Media Queries</li>
         </ul>
       </div>
       <div class="skill-list">
         <ul>
-          <li>Media Queries</li>
+          
           <li>Figma</li>
         </ul>
       </div>
