--- a/work.html
+++ b/work.html
@@ -21,9 +21,9 @@
 </head>
 <body>
 
-  <nav class="navbar navbar-expand-sm bg-body-tertiary navbar-color" style="background-color: #F6F7F0 !important;">
+  <nav class="navbar navbar-expand-sm bg-body-tertiary navbar-color" style="background-color: white !important;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/"><img src="/logo/logo.png" alt="Logo" class="navbar-logo" title="Home"></a>
+      <a class="navbar-brand" href="/"><img src="/logo/logo-white.png" alt="Logo" class="navbar-logo" title="Home"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -41,9 +41,21 @@
 
 <div class="page-container">
 
-<h1 class="mb-4"><i class="fa-solid fa-code"></i> Check out my projects</h1>
+<h1 class="mb-5"><i class="fa-solid fa-code"></i> Check out my projects</h1>
 
 <div class="row">
+  <div class="col-lg-4">
+    <div class="project-container text-center">
+      <div class="project-img-container"><img src="/images/travel-blog.png" alt="Weather Project Photo" class="project-img-custom" /></div>
+      <hr />
+      <h4 class="mt-2">Travel Blog</h4>
+      <p>Built with HTML, CSS, Bootstrap. Created in the course of SheCodes coding classes.</p>
+      <hr class="mb-4" />
+    <div class="project-container-footer mb-2">
+      <a href="https://verenx-travel-mahmutlar.netlify.app/" class="button-primary" target="_blank">Take a tour</a>
+    </div>
+  </div>
+  </div>
 <div class="col-lg-4">
   <div class="project-container text-center">
     <div class="project-img-container"><img src="/images/weather-app.png" alt="Weather Project Photo" class="project-img-custom" /></div>
@@ -53,18 +65,6 @@
     <hr class="mb-4" />
   <div class="project-container-footer mb-2">
     <a href="https://shecodes-weather-app-verenx.netlify.app" class="button-primary" target="_blank">Take a tour</a>
-  </div>
-</div>
-</div>
-<div class="col-lg-4">
-  <div class="project-container text-center">
-    <div class="project-img-container"><img src="/images/world-clock.png" alt="Weather Project Photo" class="project-img-custom" /></div>
-    <hr />
-    <h4 class="mt-2">World clock</h4>
-    <p> Built with HTML, CSS, Javascript and moment.js. Created in the course of SheCodes coding classes.</p>
-    <hr class="mb-4" />
-  <div class="project-container-footer mb-2">
-    <a href="https://world-clock-verenx.netlify.app" class="button-primary" target="_blank">Take a tour</a>
   </div>
 </div>
 </div>
@@ -80,6 +80,18 @@
   </div>
 </div>
 
+</div>
+<div class="col-lg-4">
+  <div class="project-container text-center">
+    <div class="project-img-container"><img src="/images/world-clock.png" alt="Weather Project Photo" class="project-img-custom" /></div>
+    <hr />
+    <h4 class="mt-2">World clock</h4>
+    <p> Built with HTML, CSS, Javascript and moment.js. Created in the course of SheCodes coding classes.</p>
+    <hr class="mb-4" />
+  <div class="project-container-footer mb-2">
+    <a href="https://world-clock-verenx.netlify.app" class="button-primary" target="_blank">Take a tour</a>
+  </div>
+</div>
 </div>
 
 <div class="col-lg-4">
