--- a/certificates.html
+++ b/certificates.html
@@ -19,12 +19,12 @@
         <script src="https://kit.fontawesome.com/4ccf2b3c54.js" crossorigin="anonymous"></script>
     </head>
 <body>
-    <nav class="navbar navbar-expand-sm bg-body-tertiary navbar-color" style="background-color: #F6F7F0 !important;">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/"><img src="/logo/logo.png" alt="Logo" class="navbar-logo" title="Home"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+  <nav class="navbar navbar-expand-sm bg-body-tertiary navbar-color" style="background-color: white !important;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/"><img src="/logo/logo-white.png" alt="Logo" class="navbar-logo" title="Home"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
             <a class="nav-link text-end !important" aria-current="page" href="/">Home</a>
