--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,9 @@
 </head>
 <body class="contact-page">
 
-  <nav class="navbar navbar-expand-sm bg-body-tertiary navbar-color" style="background-color: #F6F7F0 !important;">
+  <nav class="navbar navbar-expand-sm bg-body-tertiary navbar-color" style="background-color: white !important;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/"><img src="/logo/logo.png" alt="Logo" class="navbar-logo" title="Home"></a>
+      <a class="navbar-brand" href="/"><img src="/logo/logo-white.png" alt="Logo" class="navbar-logo" title="Home"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -38,21 +38,22 @@
     </div>
   </nav>
 
-<div class="contact-container text-center">
-  <h1 class="mb-4">Let's get in touch</h1>
-     <div class="row">
+  <h1 class="mt-4 mb-4"><i class="fa-solid fa-rocket"></i> Let's get in touch! </h1>
+  
+    <div class="contact-container text-center">
+      <div class="row">
       <div class="col-md-6">
-        <a href="mailto: verenx@gmail.com"><i class="fa-regular fa-envelope contact-icon mt-5 mb-2"></i></a><br />
-        <a href="mailto: verenx@gmail.com" class="social-links">v e r e n x @ g m a i l . c o m</a><br />
-        <a href="https://www.linkedin.com/in/verena-al-khazraji-a73bb370/" title="LinkedIn Profile" target="_blank"><i class="fa-brands fa-linkedin-in contact-icon mt-5 mb-2"></i></a><br />
-        <a href="https://www.linkedin.com/in/verena-al-khazraji-a73bb370/" title="LinkedIn Profile" target="_blank" class="social-links">V e r e n a <span>A l - K h a z r a j i</span></a>
+        <a href="mailto: verenx@gmail.com"><i class="fa-regular fa-envelope contact-page-icon mt-5 mb-2"></i></a><br />
+        <a href="mailto: verenx@gmail.com" class="social-links">verenx@gmail.com</a><br />
+        <a href="https://www.linkedin.com/in/verena-al-khazraji-a73bb370/" title="LinkedIn Profile" target="_blank"><i class="fa-brands fa-linkedin-in contact-page-icon mt-5 mb-2"></i></a><br />
+        <a href="https://www.linkedin.com/in/verena-al-khazraji-a73bb370/" title="LinkedIn Profile" target="_blank" class="social-links">Verena Al-Khazraji</a>
       </div>
     <div class="col-md-6">
       <div>
-        <a href="https://www.instagram.com/verena_codes/?hl=en" title="Instagram Profile" target="_blank"><i class="fa-brands fa-instagram contact-icon mt-5 mb-2"></i></a><br />
-        <a href="https://www.instagram.com/verena_codes/?hl=en" title="Instagram Profile" target="_blank" class="social-links">v e r e n a _ c o d e s</a><br />
-        <a href="https://github.com/verenx" title="Github Profile" target="_blank"><i class="fa-brands fa-github contact-icon mt-5 mb-2"></i></a><br />
-         <a href="https://github.com/verenx" title="Github Profile" target="_blank" class="social-links">v e r e n x</a>
+        <a href="https://www.instagram.com/verena_codes/?hl=en" title="Instagram Profile" target="_blank"><i class="fa-brands fa-instagram contact-page-icon mt-5 mb-2"></i></a><br />
+        <a href="https://www.instagram.com/verena_codes/?hl=en" title="Instagram Profile" target="_blank" class="social-links">verena_codes</a><br />
+        <a href="https://github.com/verenx" title="Github Profile" target="_blank"><i class="fa-brands fa-github contact-page-icon mt-5 mb-2"></i></a><br />
+         <a href="https://github.com/verenx" title="Github Profile" target="_blank" class="social-links">verenx</a>
       </div>
     </div>
     </div>
@@ -60,9 +61,6 @@
 
 <footer>
   <p class="footer-paragraph">This website was coded by <a href="https://www.linkedin.com/in/verena-al-khazraji-a73bb370/" target="_blank" title="LinkedIn Profile">Verena Al-Khazraji</a>, is <a href="https://github.com/verenx" target="_blank" title="Github Profile">open-sourced on Github</a> and <a href="https://verena-frontend.netlify.app/" target="_blank" title="Netlify Website">hosted on Netlify.</a></p>
-</footer>
-
-
-    
+</footer> 
 </body>
 </html>
