--- a/certificates.html
+++ b/certificates.html
@@ -31,13 +31,24 @@
               <a class="nav-link text-end !important" href="/about.html">About</a>
               <a class="nav-link text-end !important" href="/work.html">Portfolio</a>
               <a class="fw-semibold nav-link active text-end !important" href="/certificates.html">Certifications</a>
+              <a class="nav-link text-end !important" href="/blog.html">Blog</a>
               <a class="nav-link text-end !important" href="/contact.html">Contact</a>
             </div>
           </div>
         </div>
       </nav>
    
-    <h1>Under Construction</h1>
+    <h1 class="mt-4 mb-4">Certificates</h1>
+    <div class="grid-container">
+      
+      <img src="/images/certificates/advanced-responsive-web-dev-7.png" alt="SheCodes Certificate Advanced Responsive Web Development" width="400"/>
+      <img src="/images/certificates/responsive-web-dev-6.png" alt="SheCodes Certificate Responsive Web Development" width="400" />
+      <img src="/images/certificates/intro-artificial-intelligence-5.png" alt="SheCodes Certificate Intro AI" width="400" />
+      <img src="/images/certificates/advanced-web-dev-4.png" alt="SheCodes Certificate Advanced Web Development" width="400" />
+      <img src="/images/certificates/web-dev-3.png" alt="SheCodes Certificate Web Development" width="400" />
+      <img src="/images/certificates/intro-web-dev-2.png" alt="SheCodes Certificate Intro Web Development" width="400" />
+      <img src="/images/certificates/introduction-coding-1.png" alt="SheCodes Certificate Introduction to Coding" width="400" />
+    </div>
     <footer>
         <div class="contact-icons">
           <a href="mailto: verenx@gmail.com" title="My E-Mail"><i class="fa-regular fa-envelope contact-icon" title="E-Mail"></i></a>
