--- a/work.html
+++ b/work.html
@@ -33,6 +33,7 @@
           <a class="nav-link text-end !important" href="/about.html">About</a>
           <a class="fw-semibold nav-link active text-end !important" href="/work.html">Portfolio</a>
           <a class="nav-link text-end !important" href="/certificates.html">Certifications</a>
+          <a class="nav-link text-end !important" href="/blog.html">Blog</a>
           <a class="nav-link text-end !important" href="/contact.html">Contact</a>
         </div>
       </div>
